loader overflow fixed

--- a/style.scss
+++ b/style.scss
@@ -40,6 +40,11 @@ header{
 	}
 }
 
+@media screen and (min-width: 1300px){
+	main{
+	}
+}
+
 #Location{
 
 	padding-left: 10px;
@@ -206,6 +211,14 @@ footer{
 	}
 }
 
+// Pallier le dépassement du loader
+#loader, body{
+	animation-duration: 2000ms;
+}
+body{
+	animation-name: overhide;
+}
+
 #loader{
 	width: 100%;
 	height: 100%;
@@ -214,12 +227,10 @@ footer{
 	left: 0px;
 	visibility: hidden;
 	background: white;
-	animation-duration: 2000ms;
 	animation-name: loading;
 	justify-content: center;
 	display: flex;
 	align-items: center;
-
 	&_logo{
 		animation:spinning_logo 0.5s linear infinite;
 		height: 200px;
@@ -465,3 +476,11 @@ button{
 	}
 }
 
+@keyframes overhide {
+	0%{
+		overflow: hidden;
+	}
+	100%{
+		overflow: hidden;
+	}
+}
